# 3DViewer.Opengl.Cpp

./: .clang-format  .gitignore  3DViewer.sln  CMakeLists.txt  CMakePresets.json  README.md  build.ps1
SourceSerializer/: SourceSerializer.csproj
TestModel/: prt1.mem
Viewer.Avalonia.Entry/: CMakeLists.txt  Viewer.Avalonia.Entry.csproj
Viewer.Avalonia.Entry/Properties/: launchSettings.json
Viewer.Avalonia.Entry/Views/: MainWindow.axaml  MainWindow.axaml.cs  OpenglView.axaml.cs
Viewer.Geometry/: Viewer.Geometry.csproj
Viewer.IContract/: KeyCode.cs  PartGeometry.cs
Viewer.Native/: Vgo.cs  Viewer.Native.csproj
vgo/: CMakeLists.txt
vgo/include/: GLRender.h  KeyCode.h  Viewer.Geometry.hpp
vgo/src/: GlRender.cpp
